<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ea5d5d5d"
    android:baselineAligned="false"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textColor="@color/accent_material_dark" />

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_marginTop="100dp">
        <EditText
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:foreground="#00ffffff"
                android:background="?android:attr/selectableItemBackground"
                android:outlineProvider="background"
                android:textColor="@color/accent_material_light"
                android:layout_marginTop="15dp"
                android:id="@+id/signIn"
                android:layout_marginRight="5dp"
                android:onClick="signIn" />

            <Button
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_button"
                android:foreground="#00ffffff"
                android:background="?android:attr/selectableItemBackground"
                android:outlineProvider="background"
                android:textColor="@color/accent_material_light"
                android:layout_marginTop="15dp"
                android:id="@+id/signUp"
                android:onClick="signUp" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_wechat"
                android:id="@+id/wechatLogin"
                android:background="#00ffffff"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textColor="@android:color/holo_green_light" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_facebook"
                android:id="@+id/facebookLogin"
                android:background="#00ffffff"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_google"
                android:id="@+id/googleLogin"
                android:background="#00ffffff"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
