<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ea5d5d5d"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginTop="100dp">
        <EditText
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password2"
            android:hint="@string/passwordAgain"
            android:layout_marginBottom="10dp" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_button"
                android:foreground="#00ffffff"
                android:background="?android:attr/selectableItemBackground"
                android:outlineProvider="background"
                android:textColor="@color/accent_material_light"
                android:layout_marginTop="15dp"
                android:id="@+id/signIn"
                android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</LinearLayout>
