<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:baselineAligned="true"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/CONTACT_LIST"
            android:id="@+id/contact_list_header"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_gravity="end">

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:contentDescription="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_button"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                android:onClick="increaseOnClick" />

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:contentDescription="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus_button"
                android:src="@drawable/ic_remove_circle_outline_black_24dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_bar"
            android:hint="@string/Search..."
            android:textStyle="italic"
            android:layout_gravity="start"
            android:layout_weight="90" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_contact"
            android:id="@+id/add_contact_button"
            android:onClick="addContactOnClick"
            android:layout_gravity="end" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>
</LinearLayout>
